--- a/index.html
+++ b/index.html
@@ -4,9 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Image Dynamo</title>
 </head>
 <body>
-    
+    <section class="image-generator">
+        <div class="content">
+            <h1>
+                Image Dynamo
+            </h1>
+            <p>
+                Convert any text into an image by using Image Dynamo application
+            </p>
+            <form action="#" class="generate-form">
+                <input type="text" class="prompt-input" placeholder="Describe what you want to see" required>
+                <div class="controls">
+                    <select class="img-quantity">
+                        <option value="1">1 Image</option>
+                        <option value="2">2 Images</option>
+                        <option value="3">3 Images</option>
+                        <option value="4" selected>4 Images</option>
+                    </select>
+                    <button type="submit" class="generate-btn">Generate</button>
+                </div>
+            </form>
+        </div>
+    </section>
+
+    <section class="image-gallery">
+        <div class="image-card">
+            <img src="./assets/images/img-1.jpg" alt="image">
+            <a href="#" class="download-btn">
+                <img src="./assets/images/download.svg" alt="download icon">
+            </a>
+        </div>
+        <div class="image-card">
+            <img src="./assets/images/img-2.jpg" alt="image">
+            <a href="#" class="download-btn">
+                <img src="./assets/images/download.svg" alt="download icon">
+            </a>
+        </div>
+        <div class="image-card">
+            <img src="./assets/images/img-3.jpg" alt="image">
+            <a href="#" class="download-btn">
+                <img src="./assets/images/download.svg" alt="download icon">
+            </a>
+        </div>
+        <div class="image-card">
+            <img src="./assets/images/img-4.jpg" alt="image">
+            <a href="#" class="download-btn">
+                <img src="./assets/images/download.svg" alt="download icon">
+            </a>
+        </div>
+    </section>
 </body>
 </html>
