updating script.js file and fix css issue

--- a/index.html
+++ b/index.html
@@ -32,30 +32,23 @@
     </section>
 
     <section class="image-gallery">
-        <div class="image-card">
+        <div class="img-card">
             <img src="./assets/images/img-1.jpg" alt="image">
-            <a href="#" class="download-btn">
-                <img src="./assets/images/download.svg" alt="download icon">
-            </a>
+
         </div>
-        <div class="image-card">
+        <div class="img-card">
             <img src="./assets/images/img-2.jpg" alt="image">
-            <a href="#" class="download-btn">
-                <img src="./assets/images/download.svg" alt="download icon">
-            </a>
+
         </div>
-        <div class="image-card">
+        <div class="img-card">
             <img src="./assets/images/img-3.jpg" alt="image">
-            <a href="#" class="download-btn">
-                <img src="./assets/images/download.svg" alt="download icon">
-            </a>
+
         </div>
-        <div class="image-card">
+        <div class="img-card">
             <img src="./assets/images/img-4.jpg" alt="image">
-            <a href="#" class="download-btn">
-                <img src="./assets/images/download.svg" alt="download icon">
-            </a>
+
         </div>
     </section>
+    <script src="./script.js"></script>
 </body>
 </html>
